--- a/archives/toutiao-search/2023-12-19.md
+++ b/archives/toutiao-search/2023-12-19.md
@@ -1,65 +1,78 @@
 # 2023-12-19
 
-共 154 条
+共 167 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Dec 19 2023 09:45:17 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Dec 19 2023 10:19:38 GMT+0800 (China Standard Time) -->
 1. [甘肃6.2级地震已致111人遇难](https://so.toutiao.com/search?keyword=甘肃6.2级地震已致111人遇难)
-1. [甘肃地震亲历者：彻夜屋外烤火避险](https://so.toutiao.com/search?keyword=甘肃地震亲历者：彻夜屋外烤火避险)
+1. [直击甘肃6.2级地震新闻发布会](https://so.toutiao.com/search?keyword=直击甘肃6.2级地震新闻发布会)
 1. [这一年 我们向科学高峰进发](https://so.toutiao.com/search?keyword=这一年+我们向科学高峰进发)
-1. [两男生互相怂恿性侵醉酒女生被判刑](https://so.toutiao.com/search?keyword=两男生互相怂恿性侵醉酒女生被判刑)
-1. [甘肃6.2级地震瞬间：砖块如雨落下](https://so.toutiao.com/search?keyword=甘肃6.2级地震瞬间：砖块如雨落下)
+1. [甘肃地震亲历者：彻夜屋外烤火避险](https://so.toutiao.com/search?keyword=甘肃地震亲历者：彻夜屋外烤火避险)
 1. [著名京剧表演艺术家李幼斌逝世](https://so.toutiao.com/search?keyword=著名京剧表演艺术家李幼斌逝世)
+1. [两男生互相怂恿性侵醉酒女生被判刑](https://so.toutiao.com/search?keyword=两男生互相怂恿性侵醉酒女生被判刑)
 1. [24小时直击甘肃地震救援现场](https://so.toutiao.com/search?keyword=24小时直击甘肃地震救援现场)
-1. [甘肃地震有人零下20度裸背逃生](https://so.toutiao.com/search?keyword=甘肃地震有人零下20度裸背逃生)
+1. [甘肃6.2级地震瞬间：砖块如雨落下](https://so.toutiao.com/search?keyword=甘肃6.2级地震瞬间：砖块如雨落下)
 1. [医保统筹额度年底将清零？谣言](https://so.toutiao.com/search?keyword=医保统筹额度年底将清零？谣言)
-1. [教授下馆子出口成章被网友蹭课](https://so.toutiao.com/search?keyword=教授下馆子出口成章被网友蹭课)
-1. [甘肃临夏大河家黄河大桥出现裂缝](https://so.toutiao.com/search?keyword=甘肃临夏大河家黄河大桥出现裂缝)
-1. [1440名消防员赶赴甘肃灾区救援](https://so.toutiao.com/search?keyword=1440名消防员赶赴甘肃灾区救援)
 1. [男子骑车接电话撞死老人后崩溃大喊](https://so.toutiao.com/search?keyword=男子骑车接电话撞死老人后崩溃大喊)
-1. [甘肃省委书记赶往灾区](https://so.toutiao.com/search?keyword=甘肃省委书记赶往灾区)
-1. [甘肃强震 全国多地网友收到预警](https://so.toutiao.com/search?keyword=甘肃强震+全国多地网友收到预警)
+1. [甘肃地震有人零下20度裸背逃生](https://so.toutiao.com/search?keyword=甘肃地震有人零下20度裸背逃生)
+1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
+1. [女教师称水杯疑被学生投放不明物质](https://so.toutiao.com/search?keyword=女教师称水杯疑被学生投放不明物质)
+1. [甘肃临夏大河家黄河大桥出现裂缝](https://so.toutiao.com/search?keyword=甘肃临夏大河家黄河大桥出现裂缝)
+1. [甘肃地震女子抱娃裹被子院内避险](https://so.toutiao.com/search?keyword=甘肃地震女子抱娃裹被子院内避险)
 1. [董明珠自曝是i人](https://so.toutiao.com/search?keyword=董明珠自曝是i人)
-1. [应急管理部部长王祥喜赶赴震区](https://so.toutiao.com/search?keyword=应急管理部部长王祥喜赶赴震区)
+1. [1440名消防员赶赴甘肃灾区救援](https://so.toutiao.com/search?keyword=1440名消防员赶赴甘肃灾区救援)
+1. [甘肃强震 全国多地网友收到预警](https://so.toutiao.com/search?keyword=甘肃强震+全国多地网友收到预警)
+1. [教授下馆子出口成章被网友蹭课](https://so.toutiao.com/search?keyword=教授下馆子出口成章被网友蹭课)
+1. [甘肃省委书记赶往灾区](https://so.toutiao.com/search?keyword=甘肃省委书记赶往灾区)
+1. [胡塞武装袭击两艘在红海航行的货轮](https://so.toutiao.com/search?keyword=胡塞武装袭击两艘在红海航行的货轮)
+1. [孟羽童能否回格力？董明珠：未知数](https://so.toutiao.com/search?keyword=孟羽童能否回格力？董明珠：未知数)
+1. [甘肃群众在避险时天空中有鸟群盘旋](https://so.toutiao.com/search?keyword=甘肃群众在避险时天空中有鸟群盘旋)
+1. [甘肃积石山县震区电力逐步恢复](https://so.toutiao.com/search?keyword=甘肃积石山县震区电力逐步恢复)
 1. [草莓大降价 你实现草莓自由了吗](https://so.toutiao.com/search?keyword=草莓大降价+你实现草莓自由了吗)
+1. [应急管理部部长王祥喜赶赴震区](https://so.toutiao.com/search?keyword=应急管理部部长王祥喜赶赴震区)
+1. [李斌用时速90公里测续航合理吗](https://so.toutiao.com/search?keyword=李斌用时速90公里测续航合理吗)
+1. [万达集团前总裁丁本锡失联](https://so.toutiao.com/search?keyword=万达集团前总裁丁本锡失联)
+1. [南京一辅警雪中保畅不幸殉职](https://so.toutiao.com/search?keyword=南京一辅警雪中保畅不幸殉职)
+1. [博主：“养娃难可求助亲戚”是馊主意](https://so.toutiao.com/search?keyword=博主：“养娃难可求助亲戚”是馊主意)
+1. [美媒的“挺菲”文章让菲律宾人尴尬](https://so.toutiao.com/search?keyword=美媒的“挺菲”文章让菲律宾人尴尬)
+1. [国家地震应急响应级别提升至二级](https://so.toutiao.com/search?keyword=国家地震应急响应级别提升至二级)
+1. [女生睡醒发现被亲戚们围观](https://so.toutiao.com/search?keyword=女生睡醒发现被亲戚们围观)
+1. [瓶身“打孔”假茅台被查获](https://so.toutiao.com/search?keyword=瓶身“打孔”假茅台被查获)
+1. [比亚迪仰望U8挑战道歉坡](https://so.toutiao.com/search?keyword=比亚迪仰望U8挑战道歉坡)
+1. [崔天凯：中日关系是自主的](https://so.toutiao.com/search?keyword=崔天凯：中日关系是自主的)
+1. [男子未考上编制求复合被拒跳楼身亡](https://so.toutiao.com/search?keyword=男子未考上编制求复合被拒跳楼身亡)
+1. [新加坡恢复每日新冠疫情报数](https://so.toutiao.com/search?keyword=新加坡恢复每日新冠疫情报数)
+1. [武警官兵已救助5名地震被困老幼](https://so.toutiao.com/search?keyword=武警官兵已救助5名地震被困老幼)
+1. [大圆哥走红背后的故事](https://so.toutiao.com/search?keyword=大圆哥走红背后的故事)
+1. [外国游客来西安体验中国传统服饰](https://so.toutiao.com/search?keyword=外国游客来西安体验中国传统服饰)
+1. [地震后学校为防冻伤组织学生跑操](https://so.toutiao.com/search?keyword=地震后学校为防冻伤组织学生跑操)
+1. [汤镇宗送汤洛雯出嫁太紧张](https://so.toutiao.com/search?keyword=汤镇宗送汤洛雯出嫁太紧张)
+1. [马云新公司开卖贻贝和大黄鱼](https://so.toutiao.com/search?keyword=马云新公司开卖贻贝和大黄鱼)
+1. [媒体：欧冠1/8决赛对阵很均衡](https://so.toutiao.com/search?keyword=媒体：欧冠1/8决赛对阵很均衡)
+1. [韩国机器狗19.87秒跑完百米破纪录](https://so.toutiao.com/search?keyword=韩国机器狗19.87秒跑完百米破纪录)
+1. [“七姐妹”横穿马路被撞负全责](https://so.toutiao.com/search?keyword=“七姐妹”横穿马路被撞负全责)
+1. [广州电动车限行 拥堵2小时还在原地](https://so.toutiao.com/search?keyword=广州电动车限行+拥堵2小时还在原地)
+1. [世俱杯：弗鲁米嫩塞2-0开罗国民](https://so.toutiao.com/search?keyword=世俱杯：弗鲁米嫩塞2-0开罗国民)
+1. [2名00后犯强奸罪各赔女方1万获谅解](https://so.toutiao.com/search?keyword=2名00后犯强奸罪各赔女方1万获谅解)
 1. [厦门技师学院通报一教师坠亡](https://so.toutiao.com/search?keyword=厦门技师学院通报一教师坠亡)
 1. [甘肃临夏地震震区有山体坍塌](https://so.toutiao.com/search?keyword=甘肃临夏地震震区有山体坍塌)
 1. [新东方文旅员工已喊董宇辉董总老师](https://so.toutiao.com/search?keyword=新东方文旅员工已喊董宇辉董总老师)
-1. [孟羽童能否回格力？董明珠：未知数](https://so.toutiao.com/search?keyword=孟羽童能否回格力？董明珠：未知数)
-1. [国家地震应急响应级别提升至二级](https://so.toutiao.com/search?keyword=国家地震应急响应级别提升至二级)
 1. [董宇辉谈孙东旭早期言论](https://so.toutiao.com/search?keyword=董宇辉谈孙东旭早期言论)
-1. [南京一辅警雪中保畅不幸殉职](https://so.toutiao.com/search?keyword=南京一辅警雪中保畅不幸殉职)
 1. [580名消防员集结赶赴震中救援](https://so.toutiao.com/search?keyword=580名消防员集结赶赴震中救援)
 1. [“钻孔茅台”背后的技术](https://so.toutiao.com/search?keyword=“钻孔茅台”背后的技术)
-1. [李斌用时速90公里测续航合理吗](https://so.toutiao.com/search?keyword=李斌用时速90公里测续航合理吗)
-1. [女教师称水杯疑被学生投放不明物质](https://so.toutiao.com/search?keyword=女教师称水杯疑被学生投放不明物质)
-1. [瓶身“打孔”假茅台被查获](https://so.toutiao.com/search?keyword=瓶身“打孔”假茅台被查获)
 1. [董明珠称一切都是孟羽童的选择](https://so.toutiao.com/search?keyword=董明珠称一切都是孟羽童的选择)
-1. [女生睡醒发现被亲戚们围观](https://so.toutiao.com/search?keyword=女生睡醒发现被亲戚们围观)
 1. [深圳地铁回应消防广告C位是黑皮肤](https://so.toutiao.com/search?keyword=深圳地铁回应消防广告C位是黑皮肤)
-1. [男子未考上编制求复合被拒跳楼身亡](https://so.toutiao.com/search?keyword=男子未考上编制求复合被拒跳楼身亡)
 1. [专家谈醉驾新规：体现宽严相济](https://so.toutiao.com/search?keyword=专家谈醉驾新规：体现宽严相济)
-1. [博主：“养娃难可求助亲戚”是馊主意](https://so.toutiao.com/search?keyword=博主：“养娃难可求助亲戚”是馊主意)
 1. [河北两局长调研途中下水救人](https://so.toutiao.com/search?keyword=河北两局长调研途中下水救人)
 1. [美国人镜头下的中国引外国网友热议](https://so.toutiao.com/search?keyword=美国人镜头下的中国引外国网友热议)
-1. [汤镇宗送汤洛雯出嫁太紧张](https://so.toutiao.com/search?keyword=汤镇宗送汤洛雯出嫁太紧张)
-1. [马云新公司开卖贻贝和大黄鱼](https://so.toutiao.com/search?keyword=马云新公司开卖贻贝和大黄鱼)
-1. [新加坡恢复每日新冠疫情报数](https://so.toutiao.com/search?keyword=新加坡恢复每日新冠疫情报数)
 1. [日媒：超44%受访者希望岸田辞职](https://so.toutiao.com/search?keyword=日媒：超44%受访者希望岸田辞职)
-1. [“七姐妹”横穿马路被撞负全责](https://so.toutiao.com/search?keyword=“七姐妹”横穿马路被撞负全责)
 1. [汽车开进巷子撞坏水管遭砸车堵截](https://so.toutiao.com/search?keyword=汽车开进巷子撞坏水管遭砸车堵截)
-1. [大圆哥走红背后的故事](https://so.toutiao.com/search?keyword=大圆哥走红背后的故事)
-1. [2名00后犯强奸罪各赔女方1万获谅解](https://so.toutiao.com/search?keyword=2名00后犯强奸罪各赔女方1万获谅解)
-1. [韩国机器狗19.87秒跑完百米破纪录](https://so.toutiao.com/search?keyword=韩国机器狗19.87秒跑完百米破纪录)
 1. [深圳一公司团建53人被困惠东桑洲岛](https://so.toutiao.com/search?keyword=深圳一公司团建53人被困惠东桑洲岛)
-1. [比亚迪仰望U8挑战道歉坡](https://so.toutiao.com/search?keyword=比亚迪仰望U8挑战道歉坡)
-1. [崔天凯：中日关系是自主的](https://so.toutiao.com/search?keyword=崔天凯：中日关系是自主的)
 1. [小木匠女儿回应劳荣枝被执行死刑](https://so.toutiao.com/search?keyword=小木匠女儿回应劳荣枝被执行死刑)
 1. [手机如何设置地震预警](https://so.toutiao.com/search?keyword=手机如何设置地震预警)
 1. [劳荣枝被执行死刑](https://so.toutiao.com/search?keyword=劳荣枝被执行死刑)
 1. [电动自行车限行妨碍市民出行路权吗](https://so.toutiao.com/search?keyword=电动自行车限行妨碍市民出行路权吗)
 1. [董宇辉：21日晚上还有一次直播](https://so.toutiao.com/search?keyword=董宇辉：21日晚上还有一次直播)
-1. [广州电动车限行 拥堵2小时还在原地](https://so.toutiao.com/search?keyword=广州电动车限行+拥堵2小时还在原地)
 1. [国产电车受特斯拉影响有多大](https://so.toutiao.com/search?keyword=国产电车受特斯拉影响有多大)
 1. [俄自杀式无人机硬撞乌军豹2坦克](https://so.toutiao.com/search?keyword=俄自杀式无人机硬撞乌军豹2坦克)
 1. [学校回应25岁班主任跳楼身亡](https://so.toutiao.com/search?keyword=学校回应25岁班主任跳楼身亡)
